--- a/nav_speaker.html
+++ b/nav_speaker.html
@@ -12,6 +12,11 @@
     <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
     <link href="assets/css/app.css" rel="stylesheet">
 
+    <link rel="stylesheet" type="text/css" href="assets/css/demo.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/speaker.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/style2.css" />
+    <script type="text/javascript" src="js/modernizr.custom.79639.js"></script> 
+
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="../assets/js/html5shiv.js"></script>
@@ -88,7 +93,7 @@
 <br><br>
   	<div id="divandroid" class="rowdroid speaker">
           <div class="span9 banner">
-            <span>Speaker</span>
+            <span>Speakers</span>
           </div>
   	</div>
     <div class="hero headings">
@@ -101,24 +106,182 @@
 
         <div class="span12">
           <div class="row">
-            <div class="span3"><img src="assets/images/nicolas.jpg" class="img-polaroid"></div>
+            <div class="span3">
+
+              <!--<img src="assets/images/nicolas.jpg" class="img-polaroid">-->
+              <div class="container2">
+      <section class="main">
+         <ul class="ch-grid">
+          <li>
+            <div class="ch-item ch-img-20">
+              <div class="ch-info">
+               <h3>David C.</h3>
+                <p>Google Developer Advocate<a href="http://gplus.to/davidch">GPlus</a></p>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </section>
+    </div>
+
+            </div>
             <div class="span9">
-              <h3>Nicolas Bortolotti</h3>
-              <h4>Developer Relations Program Manager at Google.</h4>
+              <h3>David Chandler</h3>
+              <h4>Developer Advocate at Google.</h4>
               <div class="hr"><hr /></div>
-              <p>Nicolas has developed academic and research communities in several Latin American countries on the development platform of Google, Web and Mobile. Nicolas has played academically as professor of the National Technological University of Argentina (U.T.N.), to the chairs Software Engineering Object Oriented and Mobile Architectures. He has a passion for software development, and programs to grow and support developer communities.</p>
+              <p><b>David Chandler</b>, ingeniero electrónico de profesión, Geek, Android Developer Advocate at Google y speaker oficial del evento más importante organizado por esta compañía, que es el <b>Google I/O</b> en sus ediciones 2010, 2011, 2012. Actualmente, David trabaja en el proyecto Android en <b>Google Developers Tools Team en Atlanta.</b> Chandler, se orientó al desarrollo de aplicaciones en base de datos y dev web, publicando dichas apps de manera profesional en una gama de leguanjes de programación incluyendo: <b>C, Perl, ksh, ColdFusion, Java, JSF, GWT y Dart.</b></p>
             </div>
           </div>
 
           <div class="row">
-            <div class="span3"><img src="assets/images/nicolas.jpg" class="img-polaroid"></div>
+            <div class="span3">
+
+             <!--<img src="assets/images/nicolas.jpg" class="img-polaroid">-->
+              <div class="container2">
+      <section class="main">
+         <ul class="ch-grid">
+          <li>
+            <div class="ch-item ch-img-20">
+              <div class="ch-info">
+               <h3>David C.</h3>
+                <p>Google Developer Advocate<a href="http://gplus.to/davidch">GPlus</a></p>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </section>
+    </div>
+
+            </div>
             <div class="span9">
-              <h3>Nicolas Bortolotti</h3>
-              <h4>Developer Relations Program Manager at Google.</h4>
+              <h3>David Chandler</h3>
+              <h4>Developer Advocate at Google.</h4>
               <div class="hr"><hr /></div>
-              <p>Nicolas has developed academic and research communities in several Latin American countries on the development platform of Google, Web and Mobile. Nicolas has played academically as professor of the National Technological University of Argentina (U.T.N.), to the chairs Software Engineering Object Oriented and Mobile Architectures. He has a passion for software development, and programs to grow and support developer communities.</p>
+              <p><b>David Chandler</b>, ingeniero electrónico de profesión, Geek, Android Developer Advocate at Google y speaker oficial del evento más importante organizado por esta compañía, que es el <b>Google I/O</b> en sus ediciones 2010, 2011, 2012. Actualmente, David trabaja en el proyecto Android en <b>Google Developers Tools Team en Atlanta.</b> Chandler, se orientó al desarrollo de aplicaciones en base de datos y dev web, publicando dichas apps de manera profesional en una gama de leguanjes de programación incluyendo: <b>C, Perl, ksh, ColdFusion, Java, JSF, GWT y Dart.</b></p>
             </div>
           </div>
+
+
+
+          <div class="row">
+            <div class="span3">
+
+             <!--<img src="assets/images/nicolas.jpg" class="img-polaroid">-->
+              <div class="container2">
+      <section class="main">
+         <ul class="ch-grid">
+          <li>
+            <div class="ch-item ch-img-20">
+              <div class="ch-info">
+               <h3>David C.</h3>
+                <p>Google Developer Advocate<a href="http://gplus.to/davidch">GPlus</a></p>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </section>
+    </div>
+
+            </div>
+            <div class="span9">
+              <h3>David Chandler</h3>
+              <h4>Developer Advocate at Google.</h4>
+              <div class="hr"><hr /></div>
+              <p><b>David Chandler</b>, ingeniero electrónico de profesión, Geek, Android Developer Advocate at Google y speaker oficial del evento más importante organizado por esta compañía, que es el <b>Google I/O</b> en sus ediciones 2010, 2011, 2012. Actualmente, David trabaja en el proyecto Android en <b>Google Developers Tools Team en Atlanta.</b> Chandler, se orientó al desarrollo de aplicaciones en base de datos y dev web, publicando dichas apps de manera profesional en una gama de leguanjes de programación incluyendo: <b>C, Perl, ksh, ColdFusion, Java, JSF, GWT y Dart.</b></p>
+            </div>
+          </div>
+
+
+
+          <div class="row">
+            <div class="span3">
+
+             <!--<img src="assets/images/nicolas.jpg" class="img-polaroid">-->
+              <div class="container2">
+      <section class="main">
+         <ul class="ch-grid">
+          <li>
+            <div class="ch-item ch-img-20">
+              <div class="ch-info">
+               <h3>David C.</h3>
+                <p>Google Developer Advocate<a href="http://gplus.to/davidch">GPlus</a></p>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </section>
+    </div>
+
+            </div>
+            <div class="span9">
+              <h3>David Chandler</h3>
+              <h4>Developer Advocate at Google.</h4>
+              <div class="hr"><hr /></div>
+              <p><b>David Chandler</b>, ingeniero electrónico de profesión, Geek, Android Developer Advocate at Google y speaker oficial del evento más importante organizado por esta compañía, que es el <b>Google I/O</b> en sus ediciones 2010, 2011, 2012. Actualmente, David trabaja en el proyecto Android en <b>Google Developers Tools Team en Atlanta.</b> Chandler, se orientó al desarrollo de aplicaciones en base de datos y dev web, publicando dichas apps de manera profesional en una gama de leguanjes de programación incluyendo: <b>C, Perl, ksh, ColdFusion, Java, JSF, GWT y Dart.</b></p>
+            </div>
+          </div>
+
+
+
+          <div class="row">
+            <div class="span3">
+
+             <!--<img src="assets/images/nicolas.jpg" class="img-polaroid">-->
+              <div class="container2">
+      <section class="main">
+         <ul class="ch-grid">
+          <li>
+            <div class="ch-item ch-img-20">
+              <div class="ch-info">
+               <h3>David C.</h3>
+                <p>Google Developer Advocate<a href="http://gplus.to/davidch">GPlus</a></p>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </section>
+    </div>
+
+            </div>
+            <div class="span9">
+             <h3>David Chandler</h3>
+              <h4>Developer Advocate at Google.</h4>
+              <div class="hr"><hr /></div>
+              <p><b>David Chandler</b>, ingeniero electrónico de profesión, Geek, Android Developer Advocate at Google y speaker oficial del evento más importante organizado por esta compañía, que es el <b>Google I/O</b> en sus ediciones 2010, 2011, 2012. Actualmente, David trabaja en el proyecto Android en <b>Google Developers Tools Team en Atlanta.</b> Chandler, se orientó al desarrollo de aplicaciones en base de datos y dev web, publicando dichas apps de manera profesional en una gama de leguanjes de programación incluyendo: <b>C, Perl, ksh, ColdFusion, Java, JSF, GWT y Dart.</b></p>
+            </div>
+          </div>
+
+
+          <div class="row">
+            <div class="span3">
+
+             <!--<img src="assets/images/nicolas.jpg" class="img-polaroid">-->
+              <div class="container2">
+      <section class="main">
+         <ul class="ch-grid">
+          <li>
+            <div class="ch-item ch-img-20">
+              <div class="ch-info">
+               <h3>David C.</h3>
+                <p>Google Developer Advocate<a href="http://gplus.to/davidch">GPlus</a></p>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </section>
+    </div>
+
+            </div>
+            <div class="span9">
+              <h3>David Chandler</h3>
+              <h4>Developer Advocate at Google.</h4>
+              <div class="hr"><hr /></div>
+              <p><b>David Chandler</b>, ingeniero electrónico de profesión, Geek, Android Developer Advocate at Google y speaker oficial del evento más importante organizado por esta compañía, que es el <b>Google I/O</b> en sus ediciones 2010, 2011, 2012. Actualmente, David trabaja en el proyecto Android en <b>Google Developers Tools Team en Atlanta.</b> Chandler, se orientó al desarrollo de aplicaciones en base de datos y dev web, publicando dichas apps de manera profesional en una gama de leguanjes de programación incluyendo: <b>C, Perl, ksh, ColdFusion, Java, JSF, GWT y Dart.</b></p>
+            </div>
+          </div>
+
+
+
 
 
         </div>
