speakers section css
css circulos

--- a/nav_speaker.html
+++ b/nav_speaker.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" type="text/css" href="assets/css/demo.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/speaker.css" />
-    <link rel="stylesheet" type="text/css" href="assets/css/style2.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/style5.css" />
     <script type="text/javascript" src="js/modernizr.custom.79639.js"></script> 
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -113,13 +113,22 @@
       <section class="main">
          <ul class="ch-grid">
           <li>
-            <div class="ch-item ch-img-20">
-              <div class="ch-info">
-               <h3>David C.</h3>
+            <div class="ch-item ch-img-20">        
+              <div class="ch-info-wrap">
+                <div class="ch-info">
+                  <div class="ch-info-front ch-img-1"></div>
+                  <div class="ch-info-back">
+                    <h3>David C.</h3>
                 <p>Google Developer Advocate<a href="http://gplus.to/davidch">GPlus</a></p>
+                  </div>  
+                </div>
               </div>
             </div>
           </li>
+
+
+
+
         </ul>
       </section>
     </div>
@@ -141,73 +150,22 @@
       <section class="main">
          <ul class="ch-grid">
           <li>
-            <div class="ch-item ch-img-20">
-              <div class="ch-info">
-               <h3>David C.</h3>
+            <div class="ch-item ch-img-20">        
+              <div class="ch-info-wrap">
+                <div class="ch-info">
+                  <div class="ch-info-front ch-img-1"></div>
+                  <div class="ch-info-back">
+                    <h3>David C.</h3>
                 <p>Google Developer Advocate<a href="http://gplus.to/davidch">GPlus</a></p>
+                  </div>  
+                </div>
               </div>
             </div>
           </li>
-        </ul>
-      </section>
-    </div>
-
-            </div>
-            <div class="span9">
-              <h3>David Chandler</h3>
-              <h4>Developer Advocate at Google.</h4>
-              <div class="hr"><hr /></div>
-              <p><b>David Chandler</b>, ingeniero electrónico de profesión, Geek, Android Developer Advocate at Google y speaker oficial del evento más importante organizado por esta compañía, que es el <b>Google I/O</b> en sus ediciones 2010, 2011, 2012. Actualmente, David trabaja en el proyecto Android en <b>Google Developers Tools Team en Atlanta.</b> Chandler, se orientó al desarrollo de aplicaciones en base de datos y dev web, publicando dichas apps de manera profesional en una gama de leguanjes de programación incluyendo: <b>C, Perl, ksh, ColdFusion, Java, JSF, GWT y Dart.</b></p>
-            </div>
-          </div>
 
 
 
-          <div class="row">
-            <div class="span3">
 
-             <!--<img src="assets/images/nicolas.jpg" class="img-polaroid">-->
-              <div class="container2">
-      <section class="main">
-         <ul class="ch-grid">
-          <li>
-            <div class="ch-item ch-img-20">
-              <div class="ch-info">
-               <h3>David C.</h3>
-                <p>Google Developer Advocate<a href="http://gplus.to/davidch">GPlus</a></p>
-              </div>
-            </div>
-          </li>
-        </ul>
-      </section>
-    </div>
-
-            </div>
-            <div class="span9">
-              <h3>David Chandler</h3>
-              <h4>Developer Advocate at Google.</h4>
-              <div class="hr"><hr /></div>
-              <p><b>David Chandler</b>, ingeniero electrónico de profesión, Geek, Android Developer Advocate at Google y speaker oficial del evento más importante organizado por esta compañía, que es el <b>Google I/O</b> en sus ediciones 2010, 2011, 2012. Actualmente, David trabaja en el proyecto Android en <b>Google Developers Tools Team en Atlanta.</b> Chandler, se orientó al desarrollo de aplicaciones en base de datos y dev web, publicando dichas apps de manera profesional en una gama de leguanjes de programación incluyendo: <b>C, Perl, ksh, ColdFusion, Java, JSF, GWT y Dart.</b></p>
-            </div>
-          </div>
-
-
-
-          <div class="row">
-            <div class="span3">
-
-             <!--<img src="assets/images/nicolas.jpg" class="img-polaroid">-->
-              <div class="container2">
-      <section class="main">
-         <ul class="ch-grid">
-          <li>
-            <div class="ch-item ch-img-20">
-              <div class="ch-info">
-               <h3>David C.</h3>
-                <p>Google Developer Advocate<a href="http://gplus.to/davidch">GPlus</a></p>
-              </div>
-            </div>
-          </li>
         </ul>
       </section>
     </div>
@@ -231,13 +189,100 @@
       <section class="main">
          <ul class="ch-grid">
           <li>
-            <div class="ch-item ch-img-20">
-              <div class="ch-info">
-               <h3>David C.</h3>
+            <div class="ch-item ch-img-20">        
+              <div class="ch-info-wrap">
+                <div class="ch-info">
+                  <div class="ch-info-front ch-img-1"></div>
+                  <div class="ch-info-back">
+                    <h3>David C.</h3>
                 <p>Google Developer Advocate<a href="http://gplus.to/davidch">GPlus</a></p>
+                  </div>  
+                </div>
               </div>
             </div>
           </li>
+
+
+
+
+        </ul>
+      </section>
+    </div>
+
+            </div>
+            <div class="span9">
+              <h3>David Chandler</h3>
+              <h4>Developer Advocate at Google.</h4>
+              <div class="hr"><hr /></div>
+              <p><b>David Chandler</b>, ingeniero electrónico de profesión, Geek, Android Developer Advocate at Google y speaker oficial del evento más importante organizado por esta compañía, que es el <b>Google I/O</b> en sus ediciones 2010, 2011, 2012. Actualmente, David trabaja en el proyecto Android en <b>Google Developers Tools Team en Atlanta.</b> Chandler, se orientó al desarrollo de aplicaciones en base de datos y dev web, publicando dichas apps de manera profesional en una gama de leguanjes de programación incluyendo: <b>C, Perl, ksh, ColdFusion, Java, JSF, GWT y Dart.</b></p>
+            </div>
+          </div>
+
+
+
+          <div class="row">
+            <div class="span3">
+
+             <!--<img src="assets/images/nicolas.jpg" class="img-polaroid">-->
+              <div class="container2">
+      <section class="main">
+         <ul class="ch-grid">
+          <li>
+            <div class="ch-item ch-img-20">        
+              <div class="ch-info-wrap">
+                <div class="ch-info">
+                  <div class="ch-info-front ch-img-1"></div>
+                  <div class="ch-info-back">
+                    <h3>David C.</h3>
+                <p>Google Developer Advocate<a href="http://gplus.to/davidch">GPlus</a></p>
+                  </div>  
+                </div>
+              </div>
+            </div>
+          </li>
+
+
+
+
+        </ul>
+      </section>
+    </div>
+
+            </div>
+            <div class="span9">
+              <h3>David Chandler</h3>
+              <h4>Developer Advocate at Google.</h4>
+              <div class="hr"><hr /></div>
+              <p><b>David Chandler</b>, ingeniero electrónico de profesión, Geek, Android Developer Advocate at Google y speaker oficial del evento más importante organizado por esta compañía, que es el <b>Google I/O</b> en sus ediciones 2010, 2011, 2012. Actualmente, David trabaja en el proyecto Android en <b>Google Developers Tools Team en Atlanta.</b> Chandler, se orientó al desarrollo de aplicaciones en base de datos y dev web, publicando dichas apps de manera profesional en una gama de leguanjes de programación incluyendo: <b>C, Perl, ksh, ColdFusion, Java, JSF, GWT y Dart.</b></p>
+            </div>
+          </div>
+
+
+
+          <div class="row">
+            <div class="span3">
+
+             <!--<img src="assets/images/nicolas.jpg" class="img-polaroid">-->
+              <div class="container2">
+     <section class="main">
+         <ul class="ch-grid">
+          <li>
+            <div class="ch-item ch-img-20">        
+              <div class="ch-info-wrap">
+                <div class="ch-info">
+                  <div class="ch-info-front ch-img-1"></div>
+                  <div class="ch-info-back">
+                    <h3>David C.</h3>
+                <p>Google Developer Advocate<a href="http://gplus.to/davidch">GPlus</a></p>
+                  </div>  
+                </div>
+              </div>
+            </div>
+          </li>
+
+
+
+
         </ul>
       </section>
     </div>
@@ -260,13 +305,22 @@
       <section class="main">
          <ul class="ch-grid">
           <li>
-            <div class="ch-item ch-img-20">
-              <div class="ch-info">
-               <h3>David C.</h3>
+            <div class="ch-item ch-img-20">        
+              <div class="ch-info-wrap">
+                <div class="ch-info">
+                  <div class="ch-info-front ch-img-1"></div>
+                  <div class="ch-info-back">
+                    <h3>David C.</h3>
                 <p>Google Developer Advocate<a href="http://gplus.to/davidch">GPlus</a></p>
+                  </div>  
+                </div>
               </div>
             </div>
           </li>
+
+
+
+
         </ul>
       </section>
     </div>
