--- a/nav_androidtour.html
+++ b/nav_androidtour.html
@@ -54,7 +54,7 @@
 
                   <ul class="nav">
 
-                    <li>
+                    <li class="active1">
                       <a href="nav_androidtour.html" class="opcion1">
                         Android Tour
                       </a>
