--- a/nav_programa.html
+++ b/nav_programa.html
@@ -60,7 +60,7 @@
                       </a>
                     </li>
 
-                    <li>
+                    <li class="active2">
                       <a href="nav_programa.html" class="opcion2">Programa</a>
                     </li>
 
