--- a/nav_speaker.html
+++ b/nav_speaker.html
@@ -69,7 +69,7 @@
                       <a href="nav_programa.html" class="opcion2">Programa</a>
                     </li>
 
-                    <li>
+                    <li class="active3">
                       <a href="nav_speaker.html" class="opcion3">Speakers</a>
                     </li>
 
