--- a/nav_sponsor.html
+++ b/nav_sponsor.html
@@ -68,7 +68,7 @@
                       <a href="nav_speaker.html" class="opcion3">Speakers</a>
                     </li>
 
-                    <li>
+                    <li class="active4">
                       <a href="nav_sponsor.html" class="opcion4">Sponsors</a>
                     </li>
 
@@ -88,7 +88,7 @@
 <br><br>
 	<div id="divandroid" class="rowdroid sponsor">
         <div class="span9 banner">
-          <span>Sponsor</span>
+          <span>Sponsors</span>
         </div>
 	</div>
     <div class="hero headings">
