--- a/nav_team.html
+++ b/nav_team.html
@@ -78,7 +78,7 @@
                       <a href="nav_sponsor.html" class="opcion4">Sponsors</a>
                     </li>
 
-                    <li>
+                    <li class="active5">
                       <a href="nav_team.html" class="opcion5">Colaboradores</a>
                     </li>
 
