--- a/nav_team.html
+++ b/nav_team.html
@@ -102,6 +102,11 @@
         <h4>Equipo organizador del evento.</h4>
     </div>
 
+   <div class="hero headings" style="text-align:center;">
+        <h3>Developers</h3>
+        <h4>Equipo de desarollo encargado del website y el app android del evento.</h4>
+    </div>
+
 <div class="container2">
       <section class="main">
          <ul class="ch-grid">
@@ -138,6 +143,11 @@
             </div>
           </li>
 <br>
+
+ <div class="hero headings" style="text-align:center;">
+        <h3>Organizers</h3>
+        <h4>Equipo encargado de la organización general, sponsorships, difusión/marketing, call4papers y relaciones públicas.</h4>
+    </div>
 
  <li>
             <div class="ch-item ch-img-5">
