Ajustes contenido, responsive, sponsor y speaker

--- a/nav_sponsor.html
+++ b/nav_sponsor.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>GDGLima &middot; Android Tour Peru</title>
+    <title>GDG Lima &middot; Android Tour Peru</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Eduardo Medina Alfaro">
     <meta name="author" content="GDG Lima">
@@ -92,30 +92,35 @@
         </div>
 	</div>
     <div class="hero headings">
-        <h3>Muchos escucharon el llamado</h3>
+        <h3>Ellos escucharon el llamado</h3>
         <h4>Agradecemos a cada uno de los sponsor que hicieron posible este evento</h4>
     </div>
 
     <div class="container text-center">
-    	<div class="row sponsors">
 
-	        <div class="span3">
+        	<div class="row sponsors">
 
-	        </div><!-- /.span4 -->
+    	        <div class="offset3 span3">
+                <a href="http://www.upc.edu.pe/" target="_new">
+                  <img src="assets/images/upc.png" class="img-circle" alt="">
+                </a>
+    	        </div>
 
-	        <div class="span3">
-	        	<img data-src="holder.js/300x200" alt="">
-	        </div><!-- /.span4 -->
+    	        <div class="span3">
+                <a href="http://www.usmp.edu.pe/" target="_new">
+    	        	  <img src="assets/images/usmp.png" class="img-circle" alt="">
+                </a>
+    	        </div>
+          </div>
+  	      <!--   <div class="span3">
+  	        	<img data-src="holder.js/300x200" alt="">
+  	        </div>
 
-	        <div class="span3">
-	        	<img data-src="holder.js/300x200" alt="">
-	        </div><!-- /.span4 -->
+  	        <div class="span3">
+  	        	<img data-src="holder.js/300x200" alt="">
+  	        </div> -->
+      	</div><!-- /.row -->
 
-	        <div class="span3">
-	        	<img data-src="holder.js/300x200" alt="">
-	        </div><!-- /.span4 -->
-    	</div><!-- /.row -->
-    </div>
 
 <br><br>
     <!-- FOOTER -->
@@ -141,7 +146,7 @@
     <script type="text/javascript" src="js/lib/jquery-1.9.1.min.js">
     </script>
     <script type="text/javascript" src="js/lib/bootstrap.js">
-    </script>    
+    </script>
     <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
     <script type="text/javascript" src="js/lib/twitter-search-api.js">
     </script>
