--- a/nav_androidtour.html
+++ b/nav_androidtour.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>GDGLima &middot; Android Tour Peru</title>
+    <title>GDG Lima &middot; Android Tour Peru</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Eduardo Medina Alfaro">
     <meta name="author" content="GDG Lima">
@@ -88,15 +88,15 @@
 <br><br>
 		<div id="divandroid"class="rowdroid tour">
 	        <div class="span9 banner">
-	          <span>Android Tour</span>
+	          <span>GDG Android Tour</span>
 	        </div>
 		</div>
 	    <div class="hero headings">
-	        <h3>¿Que es el Android Tour?</h3>
+	        <h3>¿Que es el GDG Android Tour?</h3>
 	    </div>
 
-
-    	<div class="row tours">
+<div class="container">
+    	<div class="row tours text-center">
 	        <div class="offset1 span3">
 	          <img src="assets/images/GDGLimaLogo.png" class="img-circle">
 	        </div><!-- /.span4 -->
@@ -104,26 +104,25 @@
 	        	<div class="row">
 
 	        		<div class="spanportada"><br>
-	        			<p> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<b>GDG Android Tour Per&uacute;</b> </p>
 	        		</div>
 	        	</div>
-	        
 
-	        		
+
+
 	        	</div>
 
-	        </div><!-- /.span4 -->
-      	</div><!-- /.row -->
+	   </div><!-- /.span4 -->
 
-<div class="row tours">
-          <div class="offset1 span3">
+
+        <div class="row tours ">
+          <div class="offset1 span3 text-center">
             <img src="assets/images/davidchandler.jpg" class="img-circle">
           </div><!-- /.span4 -->
           <div class="span9">
             <div class="row">
 
               <div class="span9">
-                <p>El <b>GDG Android Tour Per&uacute;</b> es un conjunto de eventos gratuitos que son organizados por la comunidad <b><a href="http://plus.google.com/106035957065756239824">+Google Developer Group - GDG Lima</a></b> y <b> <a href="http://plus.google.com/117950001026140632430/">+GDG Arequipa</a></b> que buscan difundir el ecosistema de desarrollo y emprendimiento m&oacute;vil utilizando Android en Per&uacute;.</p>
+                <p>El <b>GDG Android Tour Per&uacute;</b> es un conjunto de eventos gratuitos que son organizados por la comunidad <b><a href="http://plus.google.com/106035957065756239824">+GDG Lima</a></b> y <b> <a href="http://plus.google.com/117950001026140632430/">+GDG Arequipa</a></b> que buscan difundir el ecosistema de desarrollo y emprendimiento m&oacute;vil utilizando Android en Per&uacute;.</p>
               </div>
             </div>
             <div class="row">
@@ -141,6 +140,7 @@
 
           </div><!-- /.span4 -->
         </div><!-- /.row -->
+        </div>
 
 <br><br>
 
@@ -167,7 +167,7 @@
     <script type="text/javascript" src="js/lib/jquery-1.9.1.min.js">
     </script>
     <script type="text/javascript" src="js/lib/bootstrap.js">
-    </script>    
+    </script>
     <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
     <script type="text/javascript" src="js/lib/twitter-search-api.js">
     </script>
