--- a/index.html
+++ b/index.html
@@ -123,6 +123,13 @@
             </div>
           </div>
       </div>
+
+
+
+     
+
+
+
 <br><br><br><br>
 <div class="container3">
   <br>
@@ -148,7 +155,13 @@
 
 <br><br>
 
+<hr>
+<div align="center">
+  <h2>El ingreso es libre y totalmente gratuito previo registro</h2><h1>Regístrate aquí</h1><br>
+ <div style="width:80%; text-align:left;" ><iframe  src="http://www.eventbrite.com/tickets-external?eid=5696849430&ref=etckt&v=2" frameborder="0" height="214" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Vender entradas en línea</a> <span style="color:#ddd;">a través de</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=etckt">Eventbrite</a></div></div>
+</div>
 
+<br><br><br><br>
 
         </ul>
 
