--- a/nav_sponsor.html
+++ b/nav_sponsor.html
@@ -8,6 +8,11 @@
     <meta name="author" content="GDG Lima">
     <meta name="email" content="emedinaa@gmail.com">
 
+    <link rel="stylesheet" type="text/css" href="assets/css/demo.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/common.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/style3.css" />
+    <script type="text/javascript" src="js/modernizr.custom.79639.js"></script>
+
     <link href="assets/css/bootstrap.css" rel="stylesheet">
     <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
     <link href="assets/css/app.css" rel="stylesheet">
@@ -100,17 +105,31 @@
 
         	<div class="row sponsors">
 
-    	        <div class="offset3 span3">
-                <a href="http://www.upc.edu.pe/" target="_new">
-                  <img src="assets/images/upc.png" class="img-circle" alt="">
-                </a>
-    	        </div>
+<ul class="ch-grid">
+          <li>
+            <div class="ch-item"> 
+              <div class="ch-info">
+                <h3>UPC</h3>
+                <p>Universidad Peruana de Ciencias Aplicadas<a href="http://www.upc.edu.pe"><br>www</a></p>
+              </div>
+              <div class="ch-thumb ch-img-1"></div>
+            </div>
+          </li>
 
-    	        <div class="span3">
-                <a href="http://www.usmp.edu.pe/" target="_new">
-    	        	  <img src="assets/images/usmp.png" class="img-circle" alt="">
-                </a>
-    	        </div>
+          <li>
+            <div class="ch-item"> 
+              <div class="ch-info">
+                <h3>USMP</h3>
+                <p>Universidad de San Martín de Porres<a href="http://www.usmp.edu.pe"><br>www</a></p>
+              </div>
+              <div class="ch-thumb ch-img-2"></div>
+            </div>
+          </li>
+
+        </ul>
+
+
+    	    
           </div>
   	      <!--   <div class="span3">
   	        	<img data-src="holder.js/300x200" alt="">
