--- a/nav_team.html
+++ b/nav_team.html
@@ -273,7 +273,14 @@
             </div>
           </li>
 
-
+  <li>
+            <div class="ch-item ch-img-21">
+              <div class="ch-info">
+                <h3>Ernesto</h3>
+                <p>Tarrillo Pérez<a href="http://gplus.to/ernestotarrillo">GDGLima</a></p>
+              </div>
+            </div>
+          </li>
         </ul>
 
       </section>
