--- a/nav_sponsor.html
+++ b/nav_sponsor.html
@@ -106,6 +106,16 @@
         	<div class="row sponsors">
 
 <ul class="ch-grid">
+        <li>
+            <div class="ch-item"> 
+              <div class="ch-info">
+                <h3>Belatrix</h3>
+                <p>Gold Sponsor<a href="http://www.belatrixsf.com"><br>www</a></p>
+              </div>
+              <div class="ch-thumb ch-img-3"></div>
+            </div>
+          </li>
+
           <li>
             <div class="ch-item"> 
               <div class="ch-info">
