index registro y programa
index y programa

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style2.css" />
     <script type="text/javascript" src="js/modernizr.custom.79639.js"></script>
 
+
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="../assets/js/html5shiv.js"></script>
@@ -56,6 +57,8 @@
                 <a class="brand" href="index.html">Android Tour Per&uacute;</a>
 
                 <a class="brand" href="http://www.gdglima.pe">GDGLima</a>
+
+                     <a class="brand" href="#evenbrite" style="color:red;">Regístrate ahora!</a>
 
                 <div class="nav-collapse collapse">
 
@@ -156,7 +159,7 @@
 <br><br>
 
 <hr>
-<div align="center">
+<div align="center" id="evenbrite">
   <h2>El ingreso es libre y totalmente gratuito previo registro</h2><h1>Regístrate aquí</h1><br>
   <div style="width:80%; text-align:left; opacity:0.75;" ><iframe  src="http://www.eventbrite.com/tickets-external?eid=5696849430&ref=etckt&v=2" frameborder="0" height="214" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:10px; padding:5px 0 5px; margin:2px; width:100%; text-align:left;" ><a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com/r/etckt">Vender entradas en línea</a> <span style="color:#ddd;">a través de</span> <a style="color:#ddd; text-decoration:none;" target="_blank" href="http://www.eventbrite.com?ref=etckt">Eventbrite</a></div></div>
 </div>
