--- a/nav_programa.html
+++ b/nav_programa.html
@@ -92,9 +92,10 @@
         </div>
 	</div>
     <div class="hero headings">
-        <h3>Martes 02 de Abril 2013</h3>
-        <h3>De 3:00 hasta las 8:30 pm</h3>
-        <h4>Para aprovechar al máximo las sesiones, te invitamos a revisar las Recomendaciones técnicas elaboradas por los ponentes.</h4>
+        <h3 style="background-color:#FFFFFF; border-radius:30%; color:#4d8cf6;" align="center">Lunes 1 de Abril 2013: Google for Entrepreneurs</h3>
+        <h3>De 7:00PM a 9:30PM</h3>
+        <h4>Universidad Peruana de Ciencias Aplicadas UPC- Sede Monterrico - Aula Magna</h4>
+        <h4>Registro: <a href="http://gdglima-entrepreneurs.eventbrite.com/">gdglima-entrepreneurs.evenbrite.com</a></h4>
     </div>
 
     <div class="container speakers text-center">
@@ -108,53 +109,106 @@
     		<tbody>
 				<tr>
 					<td>
-						<span>8:00 a 8:45</span>
+						<span>7:00PM a 8:00PM</span>
 					</td>
 					<td>
-						<span>Recepción de asistentes</span>
+						<span>Bienvenida, coffe break de networking</span>
 					</td>
 				</tr>
 
 				<tr>
 					<td>
-						<span>9:00 a 9:30</span>
+						<span>8:00PM a 9:00PM</span>
 					</td>
 					<td>
-						<span>Inauguraci&oacute;n</span>
+						<span>Google Tools for Entrepreneurs con David Chandler</span>
 					</td>
 				</tr>
 
 				<tr>
 					<td>
-						<span>9:30 a 10:00</span>
+						<span>9:00PM a 9:30PM</span>
 					</td>
 					<td>
-						<span>Conferencia GDG Lima and Google DevRel</span>
+						<span>Preguntas y Respuestas</span>
 					</td>
 				</tr>
 
-				<tr>
-					<td>
-						<span>10:00 a 10:20</span>
-					</td>
-					<td>
-						<span>Recepción de asistentes</span>
-					</td>
-				</tr>
-
-				<tr>
-					<td>
-						<span>10:20 a 11:00</span>
-					</td>
-					<td>
-						<span>Recepción de asistentes</span>
-					</td>
-				</tr>
+				
     		</tbody>
     	</table>
     </div>
 
-<br><br>
+
+
+ <div class="hero headings">
+        <h3 style="background-color:#4d8cf6; border-radius:30%; color:white;" align="center">Martes 02 de Abril 2013: Android Lima Day</h3>
+        <h3>De 3:00PM a 8:30PM</h3>
+        <h4>Facultad de Ingeniería - Universidad San Martín de Porres USMP</h4>
+        <h4>Registro: <a href="http://androidtourperu.eventbrite.com/">androidtourperu.eventbrite.com</a></h4>
+        <h3>Los detalles de este programa, se estarán publicando próximamente, gracias por la espera!</h3>
+    </div>
+
+    <div class="container speakers text-center">
+      <table class="table table-bordered">
+        <thead>
+       <!-- <tr>
+          <th>Hora</th>
+          <th>&nbsp;</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+          <td>
+            <span>8:00 a 8:45</span>
+          </td>
+          <td>
+            <span>Recepción de asistentes</span>
+          </td>
+        </tr>
+
+        <tr>
+          <td>
+            <span>9:00 a 9:30</span>
+          </td>
+          <td>
+            <span>Inauguraci&oacute;n</span>
+          </td>
+        </tr>
+
+        <tr>
+          <td>
+            <span>9:30 a 10:00</span>
+          </td>
+          <td>
+            <span>Conferencia GDG Lima and Google DevRel</span>
+          </td>
+        </tr>
+
+        <tr>
+          <td>
+            <span>10:00 a 10:20</span>
+          </td>
+          <td>
+            <span>Recepción de asistentes</span>
+          </td>
+        </tr>
+
+        <tr>
+          <td>
+            <span>10:20 a 11:00</span>
+          </td>
+          <td>
+            <span>Recepción de asistentes</span>
+          </td>
+        </tr>
+
+      -->
+        </tbody>
+      </table>
+    </div>
+
+    <br><br>
     <!-- FOOTER -->
     <footer>
 
